--- a/index.html
+++ b/index.html
@@ -4,8 +4,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<header>
+    <h1>Grigori Melnikovi</h1>
+    <img src="./img/HGVZtSyhzuo.jpg" alt="my avatar">
+</header>
+<main>
+   <div>
+    <h2>My Contact Info</h2>
+    <nav>
+      <ul>
+        <li>Telegram : @Tenedeus</li>
+        <li>GitHub : Tenedeus</li>
+        <li>Discord : Tenedeus#0794</li>
+      </ul> 
+    </nav>
+</div>
+   <div>
+    <h2>Summary</h2>
+<p>The primary goal for me is the development and acquisition of new useful skills. It so happened that when I tried my hand at programming, I fell in love with it. Almost as strong as coffee in the morning. Of my main positive traits, I can note purposefulness and perseverance in solving problems. I really want to gain experience and skills in order to be confident in my ability to cope with the tasks and effectively solve them in the future</p>
+</div>
+<div>
+    <h2>Skills</h2>
+    <nav>
+        <ol>
+            <li>HTML</li>
+            <li>JavaScrip</li>
+            <li>Python</li>
+        </ol>
+    </nav>
+</div>
+<div>
+    <h2>Code examples</h2>
+    <code> function basicOp(operation, value1, value2)
+ 
+        switch(operation) {
+          case '+':
+            return value1 + value2;
+          case '-': 
+            return value1 - value2;
+          case "*": 
+            return value1 * value2;
+          case "/":
+            return value1 / value2;
+          default:
+            return 'Invalid operation'
+      }</code>
+</div>
+<div>
+    <h2>Education</h2>
+    <nav>
+    <ul>
+        <li>School №7</li>
+        <li>Culinary school golden sea </li>
+    </ul>    
+    </nav>
+</div>
+<div>
+    <h2>Experience</h2>
+    <nav>
+    <ul>
+        <li>Seven years of work in catering as a cook</li>
+    </ul>    
+    </nav>
+</div>
+<div>
+    <h2>Languages</h2>
+    <nav>
+    <ul>
+        <li>Georgian(Native speaker level)</li>
+        <li>Russian(Native speaker level)</li>
+        <li>English(B2)</li>
+    </ul>    
+    </nav>
+</div>
+<div>
+    <h2>English</h2>
+    <p>In addition to standard school education, I additionally studied with a teacher, and also devoted some time to such an application as duolingo. In addition to all of the above, for a long time I communicated with native speakers</p>
+</div>
+</main>
+<footer>
+    <nav>
+    <a href="https://github.com/Tenedeus">My github</a>
+    <p>2023</p>
+    <p><a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" alt="">
+    </a></p>
+</nav>
+</footer>
 </body>
 </html>
