docs : edit stylе file, edit index file

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 </head>
 <body>
 <header>
+    <div class="main">
     <h1>Grigori Melnikovi</h1>
+</div>
+<div class="avatar">
     <img src="./img/HGVZtSyhzuo.jpg" alt="my avatar">
+</div>
 </header>
 <main>
-   <div>
+    
+   <div class="my-info">
     <h2>My Contact Info</h2>
     <nav>
       <ul>
@@ -22,11 +27,11 @@
       </ul> 
     </nav>
 </div>
-   <div>
+   <div class="Summary">
     <h2>Summary</h2>
 <p>The primary goal for me is the development and acquisition of new useful skills. It so happened that when I tried my hand at programming, I fell in love with it. Almost as strong as coffee in the morning. Of my main positive traits, I can note purposefulness and perseverance in solving problems. I really want to gain experience and skills in order to be confident in my ability to cope with the tasks and effectively solve them in the future</p>
 </div>
-<div>
+<div class="Skills">
     <h2>Skills</h2>
     <nav>
         <ol>
@@ -36,7 +41,7 @@
         </ol>
     </nav>
 </div>
-<div>
+<div class="Code examples">
     <h2>Code examples</h2>
     <code> function basicOp(operation, value1, value2)
  
@@ -53,7 +58,7 @@
             return 'Invalid operation'
       }</code>
 </div>
-<div>
+<div class="Education">
     <h2>Education</h2>
     <nav>
     <ul>
@@ -62,15 +67,16 @@
     </ul>    
     </nav>
 </div>
-<div>
+<div class="Experience">
     <h2>Experience</h2>
     <nav>
     <ul>
         <li>Seven years of work in catering as a cook</li>
+        <li><a href="https://tenedeus.github.io/rsschool-cv/cv">My CV project</a></li>
     </ul>    
     </nav>
 </div>
-<div>
+<div class="Languages">
     <h2>Languages</h2>
     <nav>
     <ul>
@@ -80,18 +86,18 @@
     </ul>    
     </nav>
 </div>
-<div>
+<div class="English">
     <h2>English</h2>
     <p>In addition to standard school education, I additionally studied with a teacher, and also devoted some time to such an application as duolingo. In addition to all of the above, for a long time I communicated with native speakers</p>
 </div>
 </main>
 <footer>
-    <nav>
-    <a href="https://github.com/Tenedeus">My github</a>
-    <p>2023</p>
-    <p><a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" alt="">
+    <div class="rs-image">
+        <a href="https://github.com/Tenedeus">My github</a>
+        <p>2023</p>
+        <p><a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" alt="">
     </a></p>
-</nav>
+</div>
 </footer>
 </body>
 </html>
